--- a/now.json
+++ b/now.json
@@ -4,7 +4,8 @@
   "alias": "edusolutions-dev",
   "builds": [
     {
-      "src": "package.json"
+      "src": "package.json",
+      "use": "@now /static-build"
     }
   ],
   "env": {
