--- a/now.json
+++ b/now.json
@@ -8,9 +8,11 @@
       "use": "@now /static-build"
     }
   ],
-  "env": {
-    "REACT_APP_API_KEY": "@react_app_api_key",
-    "REACT_APP_AUTHDOMAIN": "@react_app_authdomain",
-    "REACT_APP_DATABASEURL": "@react_app_databaseurl"
+  "build": {
+    "env": {
+      "REACT_APP_API_KEY": "@react_app_api_key",
+      "REACT_APP_AUTHDOMAIN": "@react_app_authdomain",
+      "REACT_APP_DATABASEURL": "@react_app_databaseurl"
+    }
   }
 }
