--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "^11.2.0"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
